--- a/config/crd/patches/webhook_in_sites.yaml
+++ b/config/crd/patches/webhook_in_sites.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: ransites.lcm.openshift.io
+  name: sites.ran.openshift.io
 spec:
   conversion:
     strategy: Webhook
