--- a/config/rbac/site_viewer_role.yaml
+++ b/config/rbac/site_viewer_role.yaml
@@ -1,34 +1,20 @@
-
----
+# permissions for end users to view sites.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
-  name: manager-role
+  name: site-viewer-role
 rules:
 - apiGroups:
   - ran.openshift.io
   resources:
   - sites
   verbs:
-  - create
-  - delete
   - get
   - list
-  - patch
-  - update
   - watch
-- apiGroups:
-  - ran.openshift.io
-  resources:
-  - sites/finalizers
-  verbs:
-  - update
 - apiGroups:
   - ran.openshift.io
   resources:
   - sites/status
   verbs:
   - get
-  - patch
-  - update
