--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- lcm_v1alpha1_ransite.yaml
+- ran_v1alpha1_site.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
