--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - bases/ran.openshift.io_sites.yaml
 - bases/ran.openshift.io_groups.yaml
 - bases/ran.openshift.io_grouppolicies.yaml
+- bases/ran.openshift.io_grouppolicybindings.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -13,6 +14,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_sites.yaml
 #- patches/webhook_in_groups.yaml
 #- patches/webhook_in_grouppolicies.yaml
+#- patches/webhook_in_grouppolicybindings.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -20,6 +22,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_sites.yaml
 #- patches/cainjection_in_groups.yaml
 #- patches/cainjection_in_grouppolicies.yaml
+#- patches/cainjection_in_grouppolicybindings.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
