--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -3,4 +3,5 @@ resources:
 - ran_v1alpha1_site.yaml
 - ran_v1alpha1_group.yaml
 - ran_v1alpha1_grouppolicy.yaml
+- ran_v1alpha1_grouppolicybinding.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
