--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - bases/ran.openshift.io_groups.yaml
 - bases/ran.openshift.io_grouppolicies.yaml
 - bases/ran.openshift.io_grouppolicybindings.yaml
+- bases/ran.openshift.io_sitebackups.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -15,6 +16,7 @@ patchesStrategicMerge:
 #- patches/webhook_in_groups.yaml
 #- patches/webhook_in_grouppolicies.yaml
 #- patches/webhook_in_grouppolicybindings.yaml
+#- patches/webhook_in_sitebackups.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -23,6 +25,7 @@ patchesStrategicMerge:
 #- patches/cainjection_in_groups.yaml
 #- patches/cainjection_in_grouppolicies.yaml
 #- patches/cainjection_in_grouppolicybindings.yaml
+#- patches/cainjection_in_sitebackups.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
