--- a/config/crd/bases/ran.openshift.io_sitebackups.yaml
+++ b/config/crd/bases/ran.openshift.io_sitebackups.yaml
@@ -6,20 +6,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
-  name: groups.ran.openshift.io
+  name: sitebackups.ran.openshift.io
 spec:
   group: ran.openshift.io
   names:
-    kind: Group
-    listKind: GroupList
-    plural: groups
-    singular: group
+    kind: SiteBackup
+    listKind: SiteBackupList
+    plural: sitebackups
+    singular: sitebackup
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Group is the Schema for the groups API
+        description: SiteBackup is the Schema for the sitebackups API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -34,17 +34,15 @@ spec:
           metadata:
             type: object
           spec:
-            description: GroupSpec defines the desired state of Group
+            description: SiteBackupSpec defines the desired state of SiteBackup
             properties:
-              clusters:
-                description: Foo is an example field of Group. Edit group_types.go
-                  to remove/update Foo string `json:"foo,omitempty"`
-                items:
-                  type: string
-                type: array
+              foo:
+                description: Foo is an example field of SiteBackup. Edit sitebackup_types.go
+                  to remove/update
+                type: string
             type: object
           status:
-            description: GroupStatus defines the observed state of Group
+            description: SiteBackupStatus defines the observed state of SiteBackup
             type: object
         type: object
     served: true
